lnet/klnds/o2iblnd/o2iblnd_cb.c
@@ -834,7 +834,6 @@ __must_hold(&conn->ibc_lock)
 {
 	kib_msg_t *msg = tx->tx_msg;
 	kib_peer_ni_t *peer_ni = conn->ibc_peer;
-	struct lnet_ni *ni = peer_ni->ibp_ni;
 	int ver = conn->ibc_version;
 	int rc;
 	int done;
@@ -849,14 +848,7 @@ __must_hold(&conn->ibc_lock)
 	LASSERT(conn->ibc_outstanding_credits <= conn->ibc_queue_depth);
 	LASSERT(conn->ibc_credits >= 0);
 	LASSERT(conn->ibc_credits <= conn->ibc_queue_depth);
-
-	if (conn->ibc_nsends_posted ==
-	    kiblnd_concurrent_sends(ver, ni)) {
-                /* tx completions outstanding... */
-                CDEBUG(D_NET, "%s: posted enough\n",
-                       libcfs_nid2str(peer_ni->ibp_nid));
-                return -EAGAIN;
-        }
+	LASSERT(conn->ibc_nsends_posted <= conn->ibc_queue_depth);
 
         if (credit != 0 && conn->ibc_credits == 0) {   /* no credits */
                 CDEBUG(D_NET, "%s: no credits\n",
@@ -996,7 +988,7 @@ kiblnd_check_sends_locked(kib_conn_t *conn)
         }
 
 	LASSERT(conn->ibc_nsends_posted <=
-		kiblnd_concurrent_sends(ver, ni));
+		conn->ibc_queue_depth);
         LASSERT (!IBLND_OOB_CAPABLE(ver) ||
                  conn->ibc_noops_posted <= IBLND_OOB_MSGS(ver));
         LASSERT (conn->ibc_reserved_credits >= 0);
